[package]
name = "keypoint_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = { version = "0.24.6"}


# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# Enable some optimisations, but not all of it.
opt-level = 2
debug = 1
