[package]
name = "feature_detector_fast"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = { version = "0.24.6"}

[dev-dependencies]
rand_xoshiro = "0.6.0"
criterion = "0.5.1"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# Enable some optimisations, but not all of it.
opt-level = 2
debug = 1

[[bench]]
name = "benchmark"
harness = false
